[project]
name = "tpb-measurement"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Landini",email = "landinjm@umich.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "vtk (>=9.5.2,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
