[project]
name = "tpb-measurement"
version = "0.1.0"
description = ""
authors = [
    {name = "Jason Landini",email = "landinjm@umich.edu"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "vtk (>=9.5.2,<10.0.0)",
    "jax (>=0.8.2,<0.9.0)"
]

[tool.poetry]
packages = [
  { include = "tpb_measurement", from = "src" }
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
